--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Test</title>
+    </head>
         <meta charset="UTF-8">
         <body>
-            <h1>Baikal</h1>
-            <p>У меня на страничке Вы можете посмотреть наиши туры по Байкалу<a href="https://vk.com/elenan_baikal/" title="Домашняя страница elenan_baikal"target="blank">VK</a></p>   
+            <h1> Baikal</h1>
+            <p> У меня на страничке Вы можете посмотреть наиши туры по Байкалу<a href="https://vk.com/elenan_baikal/" title="Домашняя страница elenan_baikal"target="_blank">VK</a></p>   
         </body>
-    </head>
-</html>
+    </html>
