--- a/homework_2/sandy.html
+++ b/homework_2/sandy.html
@@ -17,7 +17,7 @@
       <li> Черный чай</li>
     </ul>
     <table wigth="300" bgcolor="turquoise" border="1" 
-    cellspacing="5" cellpadding="10" style="float:left" margin:50px>
+    cellspacing="5" cellpadding="10" style="float:left">
       <caption> Классификация чая</caption>
       <tr>
       <th> По происхождению</th>
